--- a/hello-world/Jenkinsfile
+++ b/hello-world/Jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
     stages {
         stage('Static Analysis') {
             steps {
-                echo 'Run the static analysis to the code for Shawn D'Souza' 
+                echo 'Run the static analysis to the code for Shawn DSouza' 
             }
         }
         stage('Compile') {
